# snippet of code @ 2024-12-30 16:22:03

# === Rust Playground ===
# This snippet is in: /Users/jiacai/code/rust/playground/at-2024-12-30-162203/

# Execute the snippet: C-c C-c
# Delete the snippet completely: C-c k
# Toggle between main.rs and Cargo.toml: C-c b

[package]
name = "demo"
version = "0.1.0"
authors = ["Rust Example <rust-snippet@example.com>"]
edition = "2021"

[dependencies]
grpcio = { version = "0.13", default-features = false, features = [
"protobuf-codec"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-channel = { version = "0.3", features = ["sink"] }
futures-executor = "0.3"
futures-util = { version = "0.3", features = ["sink"] }
protobuf = { version = "2", optional = false }


[[bin]]
name = "server"
path = "bin/server.rs"

[[bin]]
name = "client"
path = "bin/client.rs"