[package]
name = "demo"
version = "0.1.0"
authors = ["Rust Example <rust-snippet@example.com>"]
edition = "2021"

[dependencies]
future01 = { package = "futures", version = "0.1" }
future03 = { package = "futures", version = "0.3", features = ["compat"] }
futures-cpupool = { path = "./cpufuture" }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }

[workspace]
resolver = "2"
members = [".", "cpufuture"]

[profile.release]
debug = true
debug-assertions = false
